UHF-9132: Sidebar component spacing fix

--- a/src/scss/06_components/layout/_layout.scss
+++ b/src/scss/06_components/layout/_layout.scss
@@ -92,5 +92,6 @@ $-sidebar-width: calc(340px + $spacing-double + $spacing-double);
 }
 
 .layout-sidebar-second {
+  @include component-side-padding;
   grid-area: sidebar;
 }
